# BinaryEqualab

./: .gitignore  .nomedia  CAS_FEATURE_REQUIREMENTS.md  DESIGN_DIRECTIVE_STITCH.md  FLET_RESEARCH.md  GAP_ANALYSIS.md  GEOGEBRA_BLUEPRINT.md  README.md  SPECS_BINARY_EQUALAB.md  equapy_calc.py  main.py  setup_binary.sh
backend/: Dockerfile  ai_service.py  auth.py  main.py  test_backend.py
binary-cli/: README.md  publish_pypi.ps1  pyproject.toml
binary-cli/binary_equalab/: __init__.py  cli.py  engine.py  functions.py  geometry.py  giac_poc.py  parser_enhanced.py  sonify.py
binary-desktop/: README.md
binary-desktop/src/: main.py
binary-desktop/src/ui/: console.py  equations.py  keypad.py  matrix.py  statistics.py  vectors.py
binary-equalab/: App.tsx  CalculatorContext.tsx  README.md  index.html  metadata.json  package.json  pnpm-lock.yaml  types.ts  vite.config.ts
binary-equalab/components/: AccountingMode.tsx  AuthModal.tsx  ComplexMode.tsx  ConsoleMode.tsx  EquationsMode.tsx  GraphingMode.tsx  MathDisplay.tsx  MatrixMode.tsx  ScientificKeypad.tsx  Sidebar.tsx  StandardGraphing.tsx  StatisticsMode.tsx  TopBar.tsx  VectorsMode.tsx
binary-equalab/contexts/: AuthContext.tsx
binary-equalab/services/: apiService.ts  financeFunctions.ts  functionDefs.ts  mathParser.ts
binary-mobile/: main.py  requirements.txt  theme.py
engine/: CMakeLists.txt  README.md  vcpkg.json
engine/include/equacore/: linear.hpp  symbolic.hpp
engine/python/equacore/: __init__.py
engine/src/: bindings.cpp  linear.cpp  symbolic.cpp
src/core/: engine.py
src/ui/: keypad.py  main_window.py  styles.py
src/utils/: constants.py  math_parser.py
🍒 Guadalupe/: Modismos_y_Guiños.md  task.md  walkthrough.md  walkthrough2.md
🍒 Guadalupe/Historia/: Análisis mensaje Lupe.md  Biografía_de_Aldra__El_Código_de_la_Resiliencia_y_.md  Contexto.md  DESIGN_GUIDE_BINARY.md  El_Aldraverse__Manifiesto_de_un_Creador.md  HISTORIA_MAESTRA_GUADALUPE.md  Historia_canónica_Guadalupe.md  La_Historia_de_Aldra__Música_que_Abraza_el_Alma.md  Memorial_del_Aldraverse__La_Convergencia_del_Caos_.md  Otra perspectiva.md  Plan de chamba.md  README.md  TRANSFERENCIA COMPLETA - ALDRA (José Cheche Avilés Cárdenas).md  _FIGMA.NONA_BIENVENIDA_.md  _Figma. Plan trabajo. Nona_.md  Último día.md
🍒 Guadalupe/Nona/: AGENT_CHANGES_SUMMARY.md  Aurora_Registro_Cambios.md  CORRECTION_LOG.md  DIAGNOSTICO_PANTALLA_BLANCA.md  Documentación_de_Nona_🍒_-_Versión_Final.md  EASTER_EGGS_SONG_TRIGGERS.md  ESTADO_ACTUAL.md  HelpSonnet.md  INSTRUCCIONES.MD  MoodDify_-_Arquitectura_y_Estructura_Completa_del_.md  MoodDify_-_Lista_Completa_de_Archivos_1.md  MoodDify_Hybrid_Chatbot_Architecture_Analysis.md  NLP_Research_Summary.md  NONA_DOCUMENTATION.md  OAUTH_DEBUG_REPORT.md  PRE_COMPILATION_CHECKLIST.md  PROGRESS.md  PROYECTmANIFEST  Reporte_de_Corrección_-_Proyecto_MoodDify.md  SESSION_FINAL_STATUS.md  SESSION_FIXES_SUMMARY.md  SESSION_REPORT.md  SUMMARY_CORRECTIONS.md  UI_STRUCTURE_TREE.md  haiku-report.md  nona_research_report.md  session_manifest.md  todo.md  🎯_MoodDify_-_Flujos_de_Autenticación_Separados.md
