[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "binary-equalab"
version = "2.1.0"
description = "Binary Equalab is a symbolic mathematics toolkit focused on clarity, performance and educational value. Designed for students, engineers and curious minds who want math to feel alive."
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "Aldra", email = "contact@aldra.dev"},
  {name = "Aldra's Team", email = "contact@aldra.dev"},
]
maintainers = [
  {name = "Aldra (José Avilés)", email = "contact@aldra.dev"}
]
keywords = [
  "symbolic-math",
  "cas",
  "engineering",
  "cli",
  "education",
  "scientific-computing",
  "math",
  "aldra"
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "sympy>=1.12",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
]

[project.scripts]
binary-math = "binary_equalab.cli:main"
beq = "binary_equalab.cli:main"
bneqls = "binary_equalab.cli:main"

[project.urls]
Homepage = "https://github.com/AldrasTeam/BinaryEquaLab"
Repository = "https://github.com/AldrasTeam/BinaryEquaLab"
Documentation = "https://github.com/AldrasTeam/BinaryEquaLab#readme"

[tool.hatch.build.targets.wheel]
packages = ["binary_equalab"]
